--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 		<meta name="msapplication-TileColor" content="#001e50"/>
 		<meta name="msapplication-TileImage" content="images/purduelogo.png"/>
 
-		<link rel="stylesheet" href="css/normalize.css" />
-		<link rel="stylesheet" href="css/main.css" />
+		<!--<link rel="stylesheet" href="css/normalize.css" />
+		<link rel="stylesheet" href="css/main.css" />-->
 		<!--	
 		<script src="js/vendor/modernizr-2.8.3.custom.min.js"></script>
 		<script src="js/vendor/picturefill.min.js" async></script>
