--- a/index.html
+++ b/index.html
@@ -108,18 +108,27 @@
 				<div id="main" role="main" class="clearfix">
 					
 
-					<h2>Research <a name="1"></a><img src="images/viperlogo.jpg" width="120" height="50"></h2>
-					<p>
-						The Video and Image Processing Laboratory (VIPER), directed by Professor Edward J. Delp, is equipped with state-of-the-art technology to digitize, store, process, stream, and display digital images and video. VIPER supports research in areas such as the development of new image analysis techniques, new image and video compression methods, the development of new surveillance and detection methods, new media and wireless streaming technologies, and creating multimedia material for use in media indexing, storage, and retrieval.
-						<br>
+					<h2>About Me</h2>
+					<p>I am a Graduate Research Assistant in the Video and Image Processing Laboratory (VIPER) in the School of Electrical and Computer Engineering (ECE) at Purdue University, under the direction of Professor Edward J. Delp. I am also a Ph.D. Candidate in ECE at Purdue University. I received my B.A from Nanjing University of Aeronautics and Astronautics in 2012.
 					</p>
-					<p><i>My research interest lies in image processing(segmentation, quality enhancement, etc.), pattern recognition and deep learning.</i></p>
 					
 			
 					<h2>Research <a name="2"></a><img src="images/viperlogo.jpg" width="120" height="50"></h2>
+					<p>The VIPER Lab, directed by Professor Edward J. Delp, is equipped with state-of-the-art technology to digitize, store, process, stream, and display digital images and video. VIPER supports research in areas such as the development of new image analysis techniques, new image and video compression methods, the development of new surveillance and detection methods, new media and wireless streaming technologies, and creating multimedia material for use in media indexing, storage, and retrieval.
+					<br>
+					<p>My research interest lies in image processing(segmentation, quality enhancement, etc.), pattern recognition and deep learning.</p>
+					<p>Y. Wang, C. Liu,  F. Zhu, C. Boushey, E. Delp. <b>"Efficient Superpixel Based Segmentation For Food Image Analysis,"</b> <i>Proceedings of IEEE International Conference on Image Processing</i>, to be appeared, 2016.</p>
+
+					<p>Y. Wang, Y. He,  F. Zhu, C. Boushey, E. Delp. <b>"The Use of Temporal
+					Information in Food Image Analysis,"</b> <i>New Trends in Image Analysis and
+					Processing -- ICIAP 2015 Workshops, Lecture Notes in Computer Science,
+					Vol. 9281, Springer International</i>, pp. 317-325, 2015. DOI: <a href="http://dx.doi.org/10.1007/978-3-319-23222-5_39">10.1007/978-3-319-23222-5_39 </a></p>
+
+					<p>Y. Wang, C. Xu, C. Boushey, F. Zhu, and E. J. Delp. <b>"Mobile image based color correction using deblurring."</b> <i>Proceedings of the IS&amp;T/SPIE Conference on Computational Imaging</i>, pp. 940107-940107, February 2015, San Francisco, CA. DOI: <a href="http://dx.doi.org/10.1117/12.2083133">10.1117/12.2083133 </a></p>
+
 					<h2>Featured Courses <a name="3"></a></h2>
 					<ul>
-						<p>Sometimes it is the people no one imagines anything of who do the things no one can imagine.- Alan Turing</p>
+						<p><i>Sometimes it is the people no one imagines anything of who do the things no one can imagine.- Alan Turing</i></p>
 						<li>ECE 637 Image Processing I</li>
 						<li>ECE 641 Model Based Signal and Image Processing (previously Image Processing II)</li>
 						<li>ECE 661 Computer Vision</li>
