change profile image

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 			<div class="wrapper">
 				<header id="page-header" role="banner" class="clearfix">
 					<br>
-					<img src="images/robot.jpg" width="110" height="250" style="float:left" hspace="12">
+					<img src="images/me.png" width="150" height="250" style="float:left" hspace="12">
 					<h1>Yu Wang</h1>
 					<p>
 						<b>Purdue University</b>
@@ -123,7 +123,7 @@
 					<i>Journal of Biomedical and Health Informatics</i>, submitted, 2016.</p>
 					<p><b>2.</b> Y. Wang, C. Liu,  F. Zhu, C. Boushey, E. Delp. 
 					<b>"Efficient Superpixel Based Segmentation For Food Image Analysis,"</b> 
-					<i>Proceedings of IEEE International Conference on Image Processing</i>, to be appeared, 2016.</p>
+					<i>Proceedings of IEEE International Conference on Image Processing</i>, to appear, 2016.</p>
 
 					<p><b>3.</b> Y. Wang, Y. He,  F. Zhu, C. Boushey, E. Delp. <b>"The Use of Temporal
 					Information in Food Image Analysis,"</b> <i>New Trends in Image Analysis and
