--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 						<br>
 						Graduate Research Assistant
 						<br>
-						Ph.D. Student Electrical and Computer Engineering
+						Ph.D. Candidate Electrical and Computer Engineering
 					</p>
 				</header> <!-- end of #page-header -->
 			</div> <!-- end of .wrapper -->
