--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
 						Ph.D. Candidate Electrical and Computer Engineering
 					</p>
 				</header> <!-- end of #page-header -->
+
 			</div> <!-- end of .wrapper -->
 		</div> <!-- end of #page-header-container -->
 
@@ -164,6 +165,7 @@
 				</aside> 
 				<aside id="sidebar" class="clearfix">
 					<h3>Contact Me<a name="4"></a></h3>
+					<p><a href="http://orcid.org/0000-0003-4030-5469"><img alt="" src="images/orcid.png" class="lazy-img" title="" style="position: relative;"></a></p>
 					<p><img alt="" src="images/fb_icon.jpeg" class="lazy-img" data-original="images/fb_icon.jpeg" title="" style="position: relative;"><a href="https://www.facebook.com/ywang.chris">My Facebook</a></p>
 					<p><img alt="" src="images/linkedin_icon.jpeg" class="lazy-img" data-original="images/linkedin_icon.jpeg" title="" style="position: relative;"><a href="http://www.linkedin.com/in/imywang">My LinkedIn</a></p>
 					
