--- a/index.html
+++ b/index.html
@@ -161,6 +161,7 @@
 					<p><a href="https://engineering.purdue.edu/~ips/">Video and Image Processing Laboratory</a></p>
 					<p><a href="http://www.tadaproject.org">TADA Project</a></p>
 					<p><a href="https://engineering.purdue.edu/~ace/">Prof. Edward J. Delp</a></p>
+					<p><a href="post_index.html">My Posts</a></p>
 					
 				</aside> 
 				<aside id="sidebar" class="clearfix">
