--- a/index.html
+++ b/index.html
@@ -1,7 +1,30 @@
 ---
 layout: default
 ---
+    <div id="main-navigation-container" class="clearfix">
+      <div class="wrapper">
+        <a href="#"><img src="images/purduelogo.png" width="50" height="50" alt="place logo here" id="main-navigation-logo"></a>
+        <nav id="main-navigation" class="clearfix">
+          <div id="main-navigation-toggle">Navigation</div>
+          <ul id="main-navigation-list">
+            <li>
+              <a href="#1">About Me</a>
+            </li>
+            <li>
+              <a href="#2">Research</a>
+            </li>
+            <li>
+              <a href="#3">Courses</a>
+            </li>
+            <li>
+              <a href="#4">Contact</a>
+            </li>
 
+            
+            </ul> <!-- end of #main-navigation-list -->
+        </nav> <!-- end of #main-navigation -->
+      </div> <!-- end of .wrapper -->
+    </div> 
 <div class="home">
 
   <div class="posts">
