--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 							<a href="#3">Courses</a>
 						</li>
 						<li>
-							<a href="internal/blog-index.html">Blog</a>
+							<a href="internal/index.html">Blog</a>
 						</li>
 
 						
