--- a/research.html
+++ b/research.html
@@ -10,7 +10,7 @@ author_profile: true
 					
 					<p>The VIPER Lab, directed by Professor Edward J. Delp, is equipped with state-of-the-art technology to digitize, store, process, stream, and display digital images and video. VIPER supports research in areas such as the development of new image analysis techniques, new image and video compression methods, the development of new surveillance and detection methods, new media and wireless streaming technologies, and creating multimedia material for use in media indexing, storage, and retrieval.
 					<br>
-					<p>I have been working on the Technology Assistant Dietary Assessment (<b>TADA</b>) project since I joined VIPER. I'm the chief Android developer and associate iOS developer for the TADA mobile applications. My research interest lies in image processing (segmentation, quality enhancement, etc.), pattern recognition and deep learning. /p>
+					<p>I have been working on the Technology Assistant Dietary Assessment (<b>TADA</b>) project since I joined VIPER. I'm the chief Android developer and associate iOS developer for the TADA mobile applications. My research interest lies in image processing (segmentation, quality enhancement, etc.), pattern recognition and deep learning. </p>
 					
 					<p><b>1.</b> Y. Wang,  J. Ribera, C. Liu, S. Yarlagadda, F. Zhu. 
 					<b>"Pill Recognition Using Minimal Labeled Data,"</b> 
