removed publications from research page

--- a/courses.html
+++ b/courses.html
@@ -11,7 +11,7 @@ author_profile: true
 					<ul>
 						
 						<li>ECE 637 Image Processing I</li>
-						<li>ECE 641 Model Based Signal and Image Processing (previously Image Processing II)</li>
+						<li>ECE 641 Model Based Signal and Image Processing</li>
 						<li>ECE 661 Computer Vision</li>
 						<li>ECE 662 Pattern Recognition</li>
 						<li>CS 578 Statistical Machine Learning</li>
