--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@ author_profile: true
 			<div class="wrapper">
 				<div id="main" role="main" class="clearfix">
 					
-					<p>I have been working on the Metropolis project at NVIDIA since July 2017. I'm interested in deep learning related computer vision applications as natural language processing. I was a Graduate Research Assistant and PhD candidate in the Video and Image Processing Laboratory (<b>VIPER</b>) in the School of Electrical and Computer Engineering (ECE) at Purdue University, under the direction of Professor Edward J. Delp. I received my B.A from Nanjing University of Aeronautics and Astronautics in 2012.  
+					<p>I have been working on the Metropolis project at NVIDIA since July 2017. I'm interested in deep learning related computer vision applications as well as natural language processing. I was a Graduate Research Assistant and PhD candidate in the Video and Image Processing Laboratory (<b>VIPER</b>) in the School of Electrical and Computer Engineering (ECE) at Purdue University, under the direction of Professor Edward J. Delp. I received my B.A from Nanjing University of Aeronautics and Astronautics in 2012.  
 					</p>
 					
 			
